--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,15 +1,5 @@
 image:
   file: .gitpod.Dockerfile
-
 # List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/43_config_ports/
 ports:
-- port: 3000
-
-# List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
-tasks:
-- init: echo 'init script' # runs during prebuild
-  command: echo 'start script'
-vscode:
-  extensions:
-    - vscjava.vscode-java-pack@0.8.0:e/rgc3uUFWKcrT0VEIg1wQ==
-    - formulahendry.code-runner@0.9.14:U0vUPTCchGiTYlRHpW9ljQ==
+  port: 6080
